--- a/README.Rmd
+++ b/README.Rmd
@@ -8,14 +8,13 @@ output: github_document
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
+  fig.path = "man/figures/README-"
 )
 library(funique)
 ```
 # funique
 
-A faster `unique()` function
+⌚️ A faster `unique()` function
 
 ## Installation
 
